--- a/style.css
+++ b/style.css
@@ -14,49 +14,94 @@ body {
     line-height: 28px;
     color: #1f2937;
     margin: 0px;
-    
+    box-sizing: border-box;
     
 }
 
-.site-nav {    
-    padding: 10px;
-    text-align: center;
+/* Start Navigation Bar */
+nav {
+    font-family: 'Roboto';
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #fff;
     width: 100%;
-    background-color: rgba(243, 243, 252, 0.568);      
     position: fixed;
     top: 0;
-    box-sizing: border-box;
-    height: 45px;
 }
 
-.about-section h2{
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+    background-color: #fff;    
+}
+
+.nav-links li {
+    list-style: none;
+}
+
+.nav-links a {
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
+    color: black;   
+
+}
+
+.burger {
     display: none;
 }
-.site-logo {
-    position:fixed;
-    z-index: 1;
-    display: flex;
-    top: 2%;
-    left: 6%;
-    font-weight: 800;
-    transform: translateY(-50%);
-    font-family: 'Montserrat';
-    font-size: 24px;
-    letter-spacing: 0px;    
-    transition: 0.4s ease;
-    cursor: pointer;
-    color: #1f2937;
- }
 
- .site-nav a {
-    margin-left: 42px;
-    /* text-align: center; */
-    font-family: 'Montserrat';
-    font-weight: 800;
-    font-size: 16px;
-    font-weight: 500;
-    text-decoration: none;
-    color: #1f2937;
+.burger div {
+    width: 25px;
+    height: 3px;
+    margin: 3px;
+    background-color: black;
+}
+
+@media screen and (max-width:980px) {
+    .nav-links {
+       
+        width: 50%;
+        
+    }   
+}
+
+@media screen and (max-width:768px) {
+    body {
+        overflow-x: hidden;
+        
+    }
+    .nav-links {
+       
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+       
+        transform: translateX(100%);
+        position: fixed;     
+   
+    }
+   .burger {
+    display: block;
+   }
+    
+}
+
+.nav-active {
+    transform: translateX(0%);
+}
+/* End Navigation Bar */
+.about-section h2{
+    display: none;
 }
 
 
@@ -77,20 +122,13 @@ body {
     padding: 5px;
 }
 
-/* .img {    
-    
-} */
-
 .col-w {
     width: 60%;
     padding-left: 15px;
     margin-top: 90px;
     text-align: center;    
 }
-/* .row {
-    margin-bottom: 150px;
-} */
-/* Clearfix (clear floats) */
+
 .row::after {
     content: "";
     clear: both;
