--- a/style.css
+++ b/style.css
@@ -237,7 +237,8 @@ nav {
     margin-bottom: 150px;
     text-align: center;
     color: #ffffff;
-     background-image: linear-gradient(180deg,#215d71 ,#114B5F ); 
+    /* 180deg to 90deg */
+    background-image: linear-gradient(90deg,#215d71 ,#114B5F); 
 }
 
 .get-in-touch h2 {
