--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ nav {
     margin: 3px;
     background-color: black;
 }
-/* From 980 to 1010px */
-@media screen and (max-width:1010px) {
+
+@media screen and (max-width:1024px) {
     .nav-links {
        
         width: 50%;
@@ -100,6 +100,28 @@ nav {
     transform: translateX(0%);
 }
 /* End Navigation Bar */
+
+/* Start scroll up button */
+#myBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: #215d71; 
+    color: #FFF; 
+    cursor: pointer; 
+    padding: 15px; 
+    border-radius: 10px; 
+    font-size: 18px; 
+}
+
+#myBtn:hover {
+    background-color: #555; 
+}
+/* End scroll up button */
 
 .about-section h2{
     display: none;
@@ -171,14 +193,12 @@ nav {
 .intro .name {
     
     color: #2b92e4;
-    /* color: #0071e3 */
-    /* color: #114B5F */
-    /* color: #dbceb4 */
+
 }
 .about-section {
-    /* max-width: 760px; */
+    
     max-width: 1000px;
-    /* padding: 150px 24px; */
+    
     margin: 0px auto;
     height: 100vh;
     padding-top: 150px;
@@ -198,6 +218,7 @@ nav {
 
 
 .skills-section {
+    height: 100vh;
     max-width: 1000px;
     padding: 150px 24px;
     padding-top: 150px;
@@ -212,6 +233,7 @@ nav {
 }
 
 .projects {
+    height: 100vh;
     max-width: 1000px;
     padding: 150px 24px;
     padding-top: 150px;
@@ -237,7 +259,6 @@ nav {
     margin-bottom: 150px;
     text-align: center;
     color: #ffffff;
-    /* 180deg to 90deg */
     background-image: linear-gradient(90deg,#215d71 ,#114B5F); 
 }
 
